Add support for sidebar, add support for headers and anchors, update build script, add various metalsmith plugins.

--- a/templates/default.html
+++ b/templates/default.html
@@ -67,7 +67,7 @@
           <div id='left' class='page-region clear-block region-empty'></div>
           <div id='right' class='page-region clear-block '>
             <div id="block-book-0" class="block block-book shown-block block-book-ogd-kit">
-              {% block sidebar %}{% endblock %}
+              {% include 'partials/_sidebar.html' %}
             </div>
           </div>
           <div id='footer' class='region-h page-region clear-block region-empty'></div>
