--- a/templates/default.html
+++ b/templates/default.html
@@ -1,90 +1,74 @@
 <!DOCTYPE html PUBLIC '-//W3C//DTD XHTML 1.0 Strict//EN' 'http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd'>
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en' lang='en' dir='ltr'>
-  <head>
-    <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
-    <link rel='prev' href='http://data.worldbank.org/open-government-data-toolkit' />
-    <link rel='up' href='http://data.worldbank.org/open-government-data-toolkit' />
-    <link rel='next' href='http://data.worldbank.org/about/open-government-data-toolkit/it-solutions' />
-    <link rel='canonical' href='http://data.worldbank.org/about/open-government-data-toolkit/knowledge-repository' />
-    <link rel='shortcut icon' href='/profiles/datafinder/themes/datum/favicon.ico' type='image/x-icon' />
-    <meta name='description' content='{{ site.description }}'/>
-    <meta name='dcterms.description' content='{{ site.decription }}'/>
-    <meta name='abstract' content='{{ site.abstract }}'/>
-    <meta name='dcterms.date' content='2013-10-24T00:00:00Z' />
-    <link rel='canonical' href='http://data.worldbank.org/about/open-government-data-toolkit/knowledge-repository'/>
-    <meta name='revisit-after' content='7 days'/>
-    {% include 'partials/_styles.html' %}
-    <title>{{ title }} | Data</title>
-  </head>
-  <body  class='not-front not-logged-in page-node node-type-simple-page one-sidebar sidebar-right i18n-en tao rubik admin-static fatright en'>
-    <div id='root'>
+<head>
+  <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
+  <link rel='prev' href='http://data.worldbank.org/open-government-data-toolkit' />
+  <link rel='up' href='http://data.worldbank.org/open-government-data-toolkit' />
+  <link rel='next' href='http://data.worldbank.org/about/open-government-data-toolkit/it-solutions' />
+  <link rel='canonical' href='http://data.worldbank.org/about/open-government-data-toolkit/knowledge-repository' />
+  <link rel='shortcut icon' href='/profiles/datafinder/themes/datum/favicon.ico' type='image/x-icon' />
+  <meta name='description' content='{{ site.description }}'/>
+  <meta name='dcterms.description' content='{{ site.decription }}'/>
+  <meta name='abstract' content='{{ site.abstract }}'/>
+  <meta name='dcterms.date' content='2013-10-24T00:00:00Z' />
+  <link rel='canonical' href='http://data.worldbank.org/about/open-government-data-toolkit/knowledge-repository'/>
+  <meta name='revisit-after' content='7 days'/>
+  <title>{{ title }} | Data</title>
+</head>
+<body  class='not-front not-logged-in page-node node-type-simple-page one-sidebar sidebar-right i18n-en tao rubik admin-static fatright en'>
+  <nav id='navigation'>
+    <div class='content'>
       {% include 'partials/_header.html' %}
-      {% include 'partials/_local.html' %}
-      {% include 'partials/_navigation.html' %}
-      <div id='nav-header'>
-        <div class='limiter'>
-          <div class='extra clear-block'>
-            <div class='languages clear-block'>
-              <label>This page in </label>
-              <ul class="links language-links">
-                <li class="en first last active"><a href="http://data.worldbank.org/about/open-government-data-toolkit/knowledge-repository" class="active active">English</a></li>
-              </ul>
-            </div>
-            <div class="title-context-links-area clear-block">
-              <div class='context-links clear-block'>
-                <ul class="links">
-                  <li class="simpleshare_link first last active"><a href="http://data.worldbank.org/about/open-government-data-toolkit/knowledge-repository" class="simpleshare active">Share</a></li>
-                </ul>
-              </div>
-              <h1 class='page-title '>
-                {{ title }}
-              </h1>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div id='page'>
-        <div class='clear-block limiter page-content'>
-          <div id='header' class='region-h page-region clear-block region-empty'></div>
-          <div id='content' class='page-region clear-block'>
-            <div class='content-wrapper clear-block'>
-              <div  id="node-2557" class="node node-simple_page clear-block node-page">
-                <div class='node-content clear-block prose'>
-                  <div class='node-body'>
-                    <div class="autotoc" id="top">
-                      {% block content %}{% endblock %}
-                    </div>
-                  </div>
-                </div>
-                <div class='node-links clear-block'>
-                  <ul class="links inline">
-                    <li class="print first last active"><a href="http://data.worldbank.org/about/open-government-data-toolkit/knowledge-repository?print" class="active">Print</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div id='left' class='page-region clear-block region-empty'></div>
-          <div id='right' class='page-region clear-block '>
-            <div id="block-book-0" class="block block-book shown-block block-book-ogd-kit">
-              {% block sidebar %}{% endblock %}
-            </div>
-          </div>
-          <div id='footer' class='region-h page-region clear-block region-empty'></div>
-        </div>
-      </div>
-      <div id='palette' class=''>
-        <div id="block-datafinder_settings-report" class="block block-datafinder_settings shown-block">
-          <h2 class="title block-title">Help/Feedback</h2>
-          <div class="content block-content clear-block">
-            User Voice  
-          </div>
-        </div>
-      </div>
-      {% include 'partials/_nav-footer.html' %}
-      {% include 'partials/_footer.html' %}
-      <!-- wbg-footer -->
-      <div class='ender'></div>
     </div>
-  </body>
+  </nav>
+
+  <header id='header'>
+    <div class='content'>
+      <h2>Data</h2>
+
+      <ul class='links primary'>
+        <li><a href='http://data.worldbank.org/country'>By Country</a></li>
+        <li><a href='http://data.worldbank.org/topic'>By Topic</a></li>
+        <li><a href='http://data.worldbank.org/indicator'>Indicators</a></li>
+        <li><a href='http://data.worldbank.org/data-catalog'>Data Catalog</a></li>
+        <li><a href='http://microdata.worldbank.org'>Microdata</a></li>
+        <li><a href='http://blogs.worldbank.org/opendata/'>Blog</a></li>
+      </ul>
+
+      <ul class='links secondary'>
+        <li><a href='http://data.worldbank.org/news'>News</a></li>
+        <li><a href='http://data.worldbank.org/about'>About</a></li>
+        <li><a href='http://datahelpdesk.worldbank.org'>Support</a></li>
+        <li><a href='http://data.worldbank.org/products'>Products</a></li>
+      </ul>
+      
+      <nav class='locale'>This page in: <strong>English</strong> | <a href='#'>Spanish</a></nav>
+    </div>
+  </header>
+  
+  <section id='main'>
+    <div class='content'>
+      <header class='header'>
+        <nav class='share'>
+          <a class='facebook'>Facebook</a>
+        </nav>
+
+        <h1>{{ title }}</h1>
+      </header>
+
+      <section class='body'>
+        {% block content %}{% endblock %}
+      </section>
+
+      <aside class='sidebar'>
+        {% block sidebar %}{% endblock %}
+      </aside>
+    </div>
+  </section>
+  <footer id='footer'>
+    <div class='content'>
+      {% include 'partials/_footer.html' %}
+    </div>
+  </footer>
+</body>
 </html>
