--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -1,41 +1,33 @@
-<div id='wbg-header' class='clear-block wbg-en'>
-  <div class='clear-block wbg-logo'>
-    <a class='wbg-logo' title='The World Bank Working for a World Free of Poverty' href='http://www.worldbank.org'></a>
-    <div class='global-search'>
-      <form method=get action='http://search.worldbank.org/all' accept-charset='UTF-8' class='clear-block'>
-        <input id='in-search-keyword' type='text' size='15' name='qterm' class='search-text' placeholder='Search' />
-        <input type='hidden' name='language' value='EN'/>
-        <input type='submit' class='search-btn' name='op' value=''/>
-      </form>
-    </div>
-    <div class='global-language-selector'>
-      <ul>
-        <li class=''><a href='http://www.worldbank.org/'>English</a></li>
-        <li class=''><a href='http://www.bancomundial.org/'>Español</a></li>
-        <li class=''><a href='http://www.banquemondiale.org/'>Français</a></li>
-        <li class=''><a href='http://www.albankaldawli.org/'>عربي</a></li>
-        <li class=''><a href='http://www.worldbank.org/eca/russian/'>Русский</a></li>
-        <li class='cn'><a href='http://www.worldbank.org.cn/Chinese/'>中文</a></li>
-        <li><a class='more' href='http://www.worldbank.org/languages' title='More Languages'>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <div class='clear-block global-nav'>
-    <ul class=''>
-      <li class=''><a href='http://www.worldbank.org/'>Home</a></li>
-      <li class=''><a href='http://www.worldbank.org/en/about'>About</a></li>
-      <li class='active'><a href='http://data.worldbank.org/'>Data</a></li>
-      <li class=''><a href='http://econ.worldbank.org/WBSITE/EXTERNAL/EXTDEC/0,,menuPK:476823~pagePK:64165236~piPK:64165141~theSitePK:469372,00.html'>
-        Research</a>
-      </li>
-      <li class=''><a href='http://wbi.worldbank.org/wbi/'>Learning</a></li>
-      <li class=''><a href='http://www.worldbank.org/en/news'>News</a></li>
-      <li class=''><a href='http://www.worldbank.org/projects?lang=en'>Projects &amp; Operations</a></li>
-      <li class=''><a href='http://www.worldbank.org/reference/'>Publications</a></li>
-      <li class=''><a href='http://www.worldbank.org/en/country'>Countries</a></li>
-      <li class=''><a href='http://www.worldbank.org/en/topic'>Topics</a></li>
-    </ul>
-  </div>        
-</div>
+<header class='header'>
+  <a class='logo' title='The World Bank Working for a World Free of Poverty' href='http://www.worldbank.org'></a>
+  <ul>
+    <li><a href='http://www.worldbank.org/'>English</a></li>
+    <li><a href='http://www.bancomundial.org/'>Español</a></li>
+    <li><a href='http://www.banquemondiale.org/'>Français</a></li>
+    <li><a href='http://www.albankaldawli.org/'>عربي</a></li>
+    <li><a href='http://www.worldbank.org/eca/russian/'>Русский</a></li>
+    <li class='cn'><a href='http://www.worldbank.org.cn/Chinese/'>中文</a></li>
+    <li><a class='more' href='http://www.worldbank.org/languages' title='More Languages'></a></li>
+  </ul>
+  <form class='search' method=get action='http://search.worldbank.org/all' accept-charset='UTF-8' class='clear-block'>
+    <input type='text' size='15' name='qterm' class='search-text' placeholder='Search'/>
+    <input type='hidden' name='language' value='EN'/>
+    <input type='submit' class='search-btn' name='op' value=''/>
+  </form>
+</header>
+
+<ul class='links'>
+  <li><a href='http://www.worldbank.org/'>Home</a></li>
+  <li><a href='http://www.worldbank.org/en/about'>About</a></li>
+  <li class='active'><a href='http://data.worldbank.org/'>Data</a></li>
+  <li><a href='http://econ.worldbank.org/WBSITE/EXTERNAL/EXTDEC/0,,menuPK:476823~pagePK:64165236~piPK:64165141~theSitePK:469372,00.html'>Research</a>
+  </li>
+  <li><a href='http://wbi.worldbank.org/wbi/'>Learning</a></li>
+  <li><a href='http://www.worldbank.org/en/news'>News</a></li>
+  <li><a href='http://www.worldbank.org/projects?lang=en'>Projects &amp; Operations</a></li>
+  <li><a href='http://www.worldbank.org/reference/'>Publications</a></li>
+  <li><a href='http://www.worldbank.org/en/country'>Countries</a></li>
+  <li><a href='http://www.worldbank.org/en/topic'>Topics</a></li>
+</ul>
+
+<h1>Data</h1>
