--- a/templates/page.html
+++ b/templates/page.html
@@ -1,4 +1,8 @@
-{% extends 'default.html' %}
+{% if locale == 'en' %}
+{% extends 'default_en.html' %}
+{% elif locale == 'es' %}
+{% extends 'default_es.html' %}
+{% endif %}
 
 {% block content %}
 {{ contents | safe }}
