--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,5 +1,5 @@
 <header class='breadcrumb'>
-  You are here » <a href='http://blogs.worldbank.org'>Blogs</a>
+  You are here › <a href='http://data.worldbank.org'>Data</a> › <a href='http://data.worldbank.org/open-government-data-toolkit'>Open Government Data Toolkit</a>
 </header>
 
 <section class='links'>
