--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -1,15 +1,14 @@
-<h2><a href="http://data.worldbank.org/open-government-data-toolkit">Open Government Data Toolkit</a></h2>
+<h2><a href='/'>Open Government Data Toolkit</a></h2>
 <ul>
-	{% for item in sidebar_en %}
-	<li{% if item.name == title %} class='active'{% endif %}>
-		<a href='{{ item.link }}'>{{ item.name }}</a>
-		{% if item.name == title %}
-		{% for heading in headings %}
-		{% if loop.first %}<ul>{% endif %}
-		<li><a href="#{{ heading.id }}">{{ heading.text }}</a></li>
-		{% if loop.last %}</ul>{% endif %}
-		{% endfor %}
-		{% endif %}
+	{% for item in sidebar %}
+	<li{% if item.name == title %} class='active'{% endif %}><a href='{{ item.link }}'>{{ item.name }}</a>
+	{% if item.name == title %}
+	{% for heading in headings %}
+	{% if loop.first %}<ul>{% endif %}
+	<li><a href="#{{ heading.id }}">{{ heading.text }}</a></li>
+	{% if loop.last %}</ul>{% endif %}
+	{% endfor %}
+	{% endif %}
 	</li>
 	{% endfor %}
 </ul>
