--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -324,9 +324,9 @@ p {
 		}
 		.links {
 			border-left: 1px solid $line;
-			display: inline;
+			float: left;
 			margin-left: $gutter;
-			padding: $gutter;
+			padding: $gutter/2 1.5*$gutter/2;
 			a {
 				margin-right: $gutter/2;
 			}
