--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -9,6 +9,6 @@
         <title>Page Redirection</title>
     </head>
     <body>
-        If you are not redirected automatically, follow the <a href='{{ site.url }}/{{ dest }}'>link</a>
+        If you are not redirected automatically, follow the <a href='{{ site.url }}{{ dest }}'>link</a>
     </body>
 </html>
