--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -1,4 +1,4 @@
-<h2><a href='/'>Open Government Data Toolkit</a></h2>
+<h2><a href='/{{ locale }}'>Open Government Data Toolkit</a></h2>
 <ul>
 	{% for item in sidebar %}
 	<li{% if item.name == title %} class='active'{% endif %}><a href='{{ item.link }}'>{{ item.name }}</a>
