Remove ref to url.

--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -2,13 +2,13 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0;url={{ site.url }}{{ dest }}">
+        <meta http-equiv="refresh" content="0;url={{ dest }}">
         <script type="text/javascript">
-            window.location.href = "{{ site.url }}{{ dest }}"
+            window.location.href = "{{ dest }}"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
-        If you are not redirected automatically, follow the <a href='{{ site.url }}{{ dest }}'>link</a>
+        If you are not redirected automatically, follow the <a href='{{ dest }}'>link</a>
     </body>
 </html>
