--- a/templates/partials/_navigation.html
+++ b/templates/partials/_navigation.html
@@ -5,7 +5,7 @@
     <form class='search' method=get action='http://search.worldbank.org/all' accept-charset='UTF-8' class='clear-block'>
       <input type='text' size='15' name='qterm' class='search-text' placeholder='Search'/>
       <input type='hidden' name='language' value='EN'/>
-      <input type='submit' class='search-btn' name='op' value=''/>
+      <button class='submit' type='submit' name='op' value=''><span>Search</span></button>
     </form>
 
     <ul>
@@ -14,8 +14,8 @@
       <li><a href='http://www.banquemondiale.org/'>Français</a></li>
       <li><a href='http://www.albankaldawli.org/'>عربي</a></li>
       <li><a href='http://www.worldbank.org/eca/russian/'>Русский</a></li>
-      <li class='cn'><a href='http://www.worldbank.org.cn/Chinese/'>中文</a></li>
-      <li><a class='more' href='http://www.worldbank.org/languages' title='More Languages'>More</a></li>
+      <li><a href='http://www.worldbank.org.cn/Chinese/'>中文</a></li>
+      <li><a class='more' href='http://www.worldbank.org/languages' title='More Languages'><span>More</span></a></li>
     </ul>
   </div>
 </header>
