--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,6 +6,10 @@
 
 @import 'bourbon';
 
+/* Icons */
+
+@import '_icon.scss';
+
 /* Colors */
 
 $black: #2B292A;
@@ -32,6 +36,7 @@ $sidebar: 300px;
 
 body {
   background: #FFF;
+  color: $base;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: $normal;
   line-height: 140%;
@@ -113,6 +118,15 @@ p {
 	  	margin-right: $gutter/2;
 	  	margin-top: 12px;
 	  	padding-right: $gutter/2;
+	  	a.more {
+	  		&:before {
+	  			@include icon();
+	  			content: 'm';
+	  		}
+	  		span {
+	  			display: none;
+	  		}
+	  	}
 	  }
 	  .search {
 	  	background: tint($black, 10%);
@@ -126,6 +140,18 @@ p {
 	  		float: left;
 	  		outline: none;
 	  		padding: $gutter/4 $gutter/2;
+	  	}
+	  	.submit {
+	  		background: transparent;
+	  		border: 0;
+	  		outline: none;
+	  		&:before {
+	  			@include icon();
+	  			content: 's';
+	  		}
+	  		span {
+	  			display: none;
+	  		}
 	  	}
 	  }
 	}
@@ -217,6 +243,23 @@ p {
 		padding: $gutter $gutter/2;
 		.links {
 			float: right;
+			a {
+				color: $grey;
+				font-size: $large;
+				margin-left: $gutter/2;
+				&:hover {
+					color: inherit;
+					text-decoration: none;
+				}
+				&:before {
+					@include icon();
+				}
+				&.facebook:before { content: 'f'; }
+				&.twitter:before { content: 't'; }
+				span {
+					display: none;
+				}
+			}
 		}
 		h1 {
 			font-size: $huge;
@@ -229,7 +272,9 @@ p {
 		border: 1px solid $line;
 		border-bottom: 2px solid $red;
 		border-top: 2px solid $red;
+		overflow: hidden;
 		padding: 1.5*$gutter/2;
+		position: relative;
 	}
 	.sidebar + .body {
 		margin-right: $sidebar + $gutter;
@@ -238,16 +283,46 @@ p {
 		float: right;
 		font-size: $larger;
 		width: $sidebar;
+		&.sticky {
+			margin-right: 1.5*$gutter/2;
+			margin-top: 1.5*$gutter/2;
+			position: absolute;
+			right: 0;
+			top: 0;
+		}
+		h2 {
+			border-top: 1px solid tint($line, 10%);
+			font-size: inherit;
+			margin: 0;
+			padding: 1.5*$gutter/2;
+			&:before {
+				@include icon();
+				content: 'h';
+				margin-right: $gutter/2;
+			}
+		}
 		ul {
 			border-top: 1px solid tint($line, 10%);
 			list-style: none;
 			margin: 0;
 			padding: 0;
+			h3 {
+				font-size: inherit;
+				margin: 0;
+				&:before {
+					@include icon();
+					content: 'r';
+					margin-right: $gutter/2;
+				}
+			}
 			li {
 				border-bottom: 1px solid tint($line, 10%);
 				padding: 1.5*$gutter/2;
 				&.active {
 					background: tint($light, 10%);
+					h3:before {
+            content: 'd';
+					}
 					a {
 						font-weight: bold;
 					}
@@ -257,7 +332,7 @@ p {
 				}
 				ul {
 					border: 0;
-					margin-left: $gutter/2;
+					margin-left: $gutter + $gutter/4;
 				}
 				li {
 					border: 0;
@@ -276,6 +351,9 @@ p {
 		padding-right: $gutter;
 		a {
 			color: $red;
+		}
+		img {
+			max-width: 100%;
 		}
 	}
 }
