--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -1,7 +1,7 @@
 <h2><a href='/{{ locale }}'>Open Government Data Toolkit</a></h2>
 <ul>
 	{% for item in sidebar %}
-	<li{% if item.name == title %} class='active'{% endif %}><a href='{{ item.link }}'>{{ item.name }}</a>
+	<li{% if item.name == title %} class='active'{% endif %}><h3><a href='{{ item.link }}'>{{ item.name }}</a></h3>
 	{% if item.name == title %}
 	{% for heading in headings %}
 	{% if loop.first %}<ul>{% endif %}
