--- a/templates/default.html
+++ b/templates/default.html
@@ -120,10 +120,17 @@
   <script>
     $(function() {
       var sidebar_top = $('#main .sidebar').offset().top;
+      var sidebar_bottom = $('#main .sidebar').offset().bottom;
+      var content_bottom = $('#main .main').offset().bottom;
       var sticky_navigation = function(){
         var scroll_top = $(window).scrollTop();
         if (scroll_top > (sidebar_top - 20)) {
-          $('#main .sidebar').addClass('sticky').css({ 'top': (scroll_top - sidebar_top + 20) });
+          if (sidebar_bottom > (content_bottom - 20)) {
+            $('#main .sidebar').addClass('sticky').css({ 'bottom': 20 });
+          }
+          else {
+            $('#main .sidebar').addClass('sticky').css({ 'top': (scroll_top - sidebar_top + 20) });
+          }
         }
         else { $('#main .sidebar').removeClass('sticky').css({}); }
       };
